<resources>
    <string name="app_name">Accucook</string>
    <string name="tab_text_1">Add New Attempt</string>
    <string name="tab_text_2">List of Attempts</string>
    <string name="tab_text_3">Alarm</string>
    <string name="form_name_fill">Name of food:</string>
    <string name="form_type_fill">Cookware:</string>
    <string name="form_device_fill">Device used:</string>
    <string name="form_minutes_fill">Minutes:</string>
    <string name="form_title">Adding formula</string>
    <string name="form_rating_fill">Rating:</string>
    <string name="form_power_fill">Power level:</string>

    <string name="button_clear">Clear</string>
    <string name="button_submit">Submit</string>
    <string name="hint_text">normal text</string>
    <string name="hint_number">number</string>


    <string name="simple_clock_title">Clock</string>
    <string name="dish_clock_title">Dish Clock</string>

    <string name="clock_sumbit_button">Submit time</string>
    <string name="hint_clock">insert time in form - 12:34</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_alarm_tabs">AlarmTabsActivity</string>


    <string name="error_hint_name">Don\'t forget name!</string>
    <string name="error_hint_cookware">Don\'t forget cookware!</string>
    <string name="error_hint_device">Don\'t forget device!</string>
    <string name="error_hint_power">Don\'t forget power!</string>
    <string name="error_hint_minutes">Don\'t forget the time!</string>


</resources>
